# home

./: .env  .env.example  .env.production  .gitignore  Code Citations.md  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  mypy.ini  otel-collector-config.yaml  prometheus.yml  pyproject.toml  requirements.txt
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
.github/workflows/: ci.yml  codeql.yml  deploy.yml  docker.yml  release.yml
alertmanager/: alertmanager.yml
alertmanager/template/: slack.tmpl
backend/: .env  Cargo.toml  Dockerfile  Dockerfile.prod  prepare.sh
backend/.cargo/: config.toml
backend/migrations/: 20240314000000_create_users.sql  20240314000001_create_ai_models.sql  20240315000000_add_subscription_and_marketplace.sql  20240315000001_seed_subscriptions.sql  20240315000002_add_payment_tables.sql
backend/src/: main.rs
backend/src/config/: database.rs  mod.rs
backend/src/db/: ai_models.rs  mod.rs
backend/src/models/: ai_model.rs  mod.rs  payment.rs  subscription.rs
backend/src/routes/: ai_models.rs  mod.rs  payment.rs  subscription.rs
backend/src/services/: stripe.rs
config/dev/dev/: development.yaml
config/dev/lint/: setup.cfg
config/prometheus/: prometheus.yml
deploy/: config.sh  deploy.sh
docs/: ARCHITECTURE.md
docs/deployment/: DEPLOYMENT.md
docs/nvidia/: OPTIMIZATION.md
docs/storage/: STORAGE_MANAGEMENT.md
examples/: catalog_example.py
frontend/: .eslintrc.json  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/api/: client.ts
frontend/src/components/Layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/components/subscription/: PlanCard.tsx
frontend/src/config/: stripe.ts
frontend/src/pages/: PaymentPage.tsx  PaymentSuccessPage.tsx  SubscriptionPage.tsx
frontend/src/pages/Dashboard/: Dashboard.tsx
frontend/src/pages/Dashboard/components/: GpuMetrics.tsx  ModelList.tsx  RecentActivity.tsx  SystemMetrics.tsx
frontend/src/services/: payment.ts  subscription.ts
frontend/src/store/: auth.ts
frontend/src/types/: env.d.ts  stripe.d.ts  subscription.ts
grafana/dashboards/: model_performance.json  nvidia_gpu.json  storage_metrics.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasources.yml
infrastructure/kubernetes/: k3d-config.yaml  kind-config.yaml
infrastructure/kubernetes/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  service.yaml  storage.yaml
infrastructure/kubernetes/helm/srt-model-quantizing/: Chart.yaml  values-dev.yaml  values.yaml
infrastructure/kubernetes/helm/srt-model-quantizing/templates/: grafana-dashboards-nvidia.yaml  hpa.yaml  prometheus-rules-nvidia.yaml
infrastructure/kubernetes/overlays/dev/: kustomization.yaml
infrastructure/kubernetes/overlays/prod/: kustomization.yaml
infrastructure/terraform/: main.tf
nginx/: prod.conf
prometheus/: prometheus.yml
prometheus/rules/: alerts.yml  storage_alerts.yml
scripts/: backup.sh  check_dependencies.sh  deploy-local.sh  deploy.sh  fix_docker_network.sh  health_check.sh  host_setup.sh  regen-lockfile.sh  restore.sh  storage_manager.py  verify_gpu.sh
srt_model_quantizing/: __init__.py  cli.py  config.py  quantizer.py  server.py
srt_model_quantizing/auth/: security.py
srt_model_quantizing/catalog/: api.py  models.py  storage.py
srt_model_quantizing/cli/: __init__.py  commands.py
srt_model_quantizing/config/: settings.py
srt_model_quantizing/monitoring/: logging.py  metrics.py  storage_metrics.py  telemetry.py
srt_model_quantizing/nemo/: optimization.py
srt_model_quantizing/storage/: cleanup.py
srt_model_quantizing/utils/: gpu.py  helpers.py  profiling.py
srt_model_quantizing/versioning/: model_version.py
terraform/: main.tf
tests/: conftest.py  test_quantizer.py
tests/integration/: test_api.py
tests/unit/: test_catalog.py
