[package]
name = "backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "migrate", "offline"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1.0.44"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
anyhow = "1.0.72"
url = "=2.2.2"

[features]
default = []

[package.metadata.sqlx]
version = "0.6.3"
features = ["postgres"]

[dependencies.idna]
version = "0.2.3"
